--- a/second.html
+++ b/second.html
@@ -17,10 +17,7 @@
     <header class="grid__item site-header">
       <div class="wrap">
         <div class="site-header__logo">
-          <a href="#" class="">
-            <span>Vol'nyye</span>
-            <span>Araty</span>
-          </a>
+          <a href="#" class=""> <span>Volny</span><span>Araty</span> </a>
         </div>
         <nav id="megaStore">
           <ul id="menu"></ul>
